--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -123,13 +123,18 @@ header
 header ul
 {
   	list-style:none;
-  	height:40px;
 
   	padding:0;
-  
-  	background: #eee;
-  	background: -moz-linear-gradient(top, #f8f8f8 0%, #dddddd 100%);
-  	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f8f8f8), color-stop(100%,#dddddd));
+
+  	width:auto;
+  	height:40px;
+}
+
+header li
+{
+	background: #eee;
+	background: -moz-linear-gradient(top, #f8f8f8 0%, #dddddd 100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f8f8f8), color-stop(100%,#dddddd));
   	background: -webkit-linear-gradient(top, #f8f8f8 0%,#dddddd 100%);
   	background: -o-linear-gradient(top, #f8f8f8 0%,#dddddd 100%);
   	background: -ms-linear-gradient(top, #f8f8f8 0%,#dddddd 100%);
@@ -138,27 +143,8 @@ header ul
   	border-radius:5px;
   	border:1px solid #d2d2d2;
   	box-shadow:inset #fff 0 1px 0, inset rgba(0,0,0,0.03) 0 -1px 0;
-  	width:270px;
-}
 
-header li 
-{
-  	float:left;
-  	border-right:1px solid #d2d2d2;
-  	width:89px;
   	height:40px;
-}
-
-header ul li + li 
-{
-  	border-left:1px solid #fff;
-  	width:88px;
-}
-
-header ul li + li + li 
-{
-  	border-right:none;
-  	width:89px;
 }
 
 header ul a
